navbar visible working fixing working images

--- a/reactpro-portfolio/src/components/About/About.css
+++ b/reactpro-portfolio/src/components/About/About.css
@@ -30,6 +30,13 @@
   
 }
 
+a{
+
+
+
+
+}
+
 
 @media screen and (max-width: 768px) {
 
